<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/corners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num1"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num2"
        app:layout_constraintLeft_toLeftOf="@+id/corners"
        app:layout_constraintTop_toBottomOf="@+id/corners"
        />

    <Button
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num3"
        app:layout_constraintLeft_toLeftOf="@+id/mid"
        app:layout_constraintTop_toBottomOf="@+id/mid"
        />

    <Button
        android:id="@+id/overlap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num4"
        app:layout_constraintLeft_toLeftOf="@+id/guide"
        app:layout_constraintTop_toBottomOf="@+id/guide"
        />

    <Button
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num5"
        app:layout_constraintLeft_toLeftOf="@+id/overlap"
        app:layout_constraintTop_toBottomOf="@+id/overlap"
        />

    <Button
        android:id="@+id/hscroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num6"
        app:layout_constraintLeft_toLeftOf="@+id/scroll"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        />

    <Button
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num7"
        app:layout_constraintLeft_toLeftOf="@+id/hscroll"
        app:layout_constraintTop_toBottomOf="@+id/hscroll"
        />

</androidx.constraintlayout.widget.ConstraintLayout>